# cvs

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  conftest.py  extension.ini.sample  pyproject.toml  pytest.ini  requirements.txt  run_all_unittests.py  setup.py  test_cli.sh
.github/workflows/: aorta-benchmark.yml  ci.yml
cvs/: conftest.py  extension.py  main.py
cvs/cli_plugins/: __init__.py  base.py  copy_config_plugin.py  generate_plugin.py  list_plugin.py  monitor_plugin.py  run_plugin.py
cvs/input/: aorta_benchmark.yaml
cvs/lib/: docker_lib.py  globals.py  html_lib.py  ibperf_lib.py  inference_lib.py  inference_max_lib.py  jax_training_lib.py  linux_utils.py  megatron_training_lib.py  mori_lib.py  parallel_ssh_lib.py  rccl_lib.py  report_plugins.py  rocm_plib.py  sglang_disagg_lib.py  utils_lib.py  verify_lib.py
cvs/models/: __init__.py  rccl.py
cvs/monitors/: README.md  __init__.py  base.py  check_cluster_health.py  hosts.txt
cvs/parsers/: __init__.py  aorta_report.py  pytorch_xdit_flux.py  pytorch_xdit_wan.py  schemas.py  tracelens.py
cvs/runners/: __init__.py  _base_runner.py  aorta.py
cvs/schema/: __init__.py  (+1 more)
docs/: conf.py  index.rst  license.rst  what-is-cvs.rst
input/: cluster.json  mi300_config.json  mi325_config.json
lib/: globals.py  html_lib.py  ibperf_lib.py  jax_training_lib.py  linux_utils.py  megatron_training_lib.py  parallel_ssh_lib.py  rccl_lib.py  rocm_plib.py  utils_lib.py  verify_lib.py
parsers/: __init__.py  aorta_report.py  schemas.py  tracelens.py
runners/: __init__.py  _base_runner.py  aorta.py
utils/: README.md  check_cluster_health.py  gen_cluster_json_file.py
(+252 files in other folders)
